--- a/package.json
+++ b/package.json
@@ -38,10 +38,14 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "eslint": "^4.1.1",
+    "eslint": "^10.0.0",
     "eslint-config-next": "^0.2.4",
     "sharp": "^0.34.5",
     "tailwindcss": "^4",
     "typescript": "^5"
+  },
+  "overrides": {
+    "minimatch": "^9.0.0",
+    "ajv": "^8.12.0"
   }
 }
